// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if leaderboard doesn't print players with empty game results 1`] = `
Array [
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-sm p-1"
      >
        Pseudo
      </div>
      <div
        className="col-sm p-1"
      >
        Best average score
      </div>
      <div
        className="col-sm p-1"
      >
        Number of games
      </div>
    </div>
  </div>,
  <input
    onChange={[Function]}
    placeholder="Search pseudo"
    type="text"
    value=""
  />,
  <small>
    Click on a pseudo to see score details.
  </small>,
]
`;

exports[`if leaderboard sends right entry to rows 1`] = `
Array [
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-sm p-1"
      >
        Pseudo
      </div>
      <div
        className="col-sm p-1"
      >
        Best average score
      </div>
      <div
        className="col-sm p-1"
      >
        Number of games
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
      >
        <a
          aria-current={null}
          className="LeaderboardRow-pseudo-0-1-2"
          href="/leaderboard/0/"
          onClick={[Function]}
        >
          John
        </a>
      </div>
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
      >
        <div
          className="GrowingBar-wrapper-0-1-5 LeaderboardRow-bar-0-1-1"
        >
          <div
            className="m-1 GrowingBar-growingBar-0-1-4"
            style={
              Object {
                "backgroundColor": "#ff2a2a",
                "width": 0,
              }
            }
          />
          <div
            style={
              Object {
                "color": "#ff2a2a",
                "fontWeight": "bold",
              }
            }
          >
            0
             %
          </div>
        </div>
      </div>
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
        data-test-class="numberOfGamesCell"
      >
        1
      </div>
    </div>
  </div>,
  <input
    onChange={[Function]}
    placeholder="Search pseudo"
    type="text"
    value=""
  />,
  <small>
    Click on a pseudo to see score details.
  </small>,
]
`;

exports[`if leaderboard sorts data from props 1`] = `
Array [
  <div
    className="container"
  >
    <div
      className="row"
    >
      <div
        className="col-sm p-1"
      >
        Pseudo
      </div>
      <div
        className="col-sm p-1"
      >
        Best average score
      </div>
      <div
        className="col-sm p-1"
      >
        Number of games
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
      >
        <a
          aria-current={null}
          className="LeaderboardRow-pseudo-0-1-2"
          href="/leaderboard/1/"
          onClick={[Function]}
        >
          Ann
        </a>
      </div>
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
      >
        <div
          className="GrowingBar-wrapper-0-1-5 LeaderboardRow-bar-0-1-1"
        >
          <div
            className="m-1 GrowingBar-growingBar-0-1-4"
            style={
              Object {
                "backgroundColor": "#ff2a2a",
                "width": 0,
              }
            }
          />
          <div
            style={
              Object {
                "color": "#ff2a2a",
                "fontWeight": "bold",
              }
            }
          >
            0
             %
          </div>
        </div>
      </div>
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
        data-test-class="numberOfGamesCell"
      >
        1
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
      >
        <a
          aria-current={null}
          className="LeaderboardRow-pseudo-0-1-2"
          href="/leaderboard/0/"
          onClick={[Function]}
        >
          John
        </a>
      </div>
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
      >
        <div
          className="GrowingBar-wrapper-0-1-5 LeaderboardRow-bar-0-1-1"
        >
          <div
            className="m-1 GrowingBar-growingBar-0-1-4"
            style={
              Object {
                "backgroundColor": "#ff2a2a",
                "width": 0,
              }
            }
          />
          <div
            style={
              Object {
                "color": "#ff2a2a",
                "fontWeight": "bold",
              }
            }
          >
            0
             %
          </div>
        </div>
      </div>
      <div
        className="col-sm p-1 LeaderboardRow-cell-0-1-3"
        data-test-class="numberOfGamesCell"
      >
        1
      </div>
    </div>
  </div>,
  <input
    onChange={[Function]}
    placeholder="Search pseudo"
    type="text"
    value=""
  />,
  <small>
    Click on a pseudo to see score details.
  </small>,
]
`;
